[build-system]
requires = ["scikit-build-core>=0.9", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pynrlmsise00"
version = "1.0.0"
description = "Unofficial C++ port of the NRLMSISE-00 Model 2001 empirical atmosphere model"
license = { text = "LGPL-3.0" }
requires-python = ">=3.8"

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON=ON", "-DBUILD_TESTING=OFF"]
cmake.build-type = "Release"
